fix: 去除重复代码段